--- a/src/FolderSharer/FolderSharer.csproj
+++ b/src/FolderSharer/FolderSharer.csproj
@@ -40,6 +40,9 @@
   <PropertyGroup>
     <ApplicationIcon>ic_folder_sharer.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CodeDek.Lib">
       <HintPath>..\..\..\CodeDek.Functions.Library\src\CodeDek.Lib\bin\Debug\netstandard2.0\CodeDek.Lib.dll</HintPath>
@@ -109,6 +112,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Costura.Fody">
+      <Version>4.0.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Security.Principal.Windows">
       <Version>4.5.1</Version>
     </PackageReference>
